--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1663,13 +1663,11 @@
 				</div>
 				<p><i>Suffixation à ces noms.</i></p>
 				<div id="section-081" class="section" data-section-no="81">
-					<p>I. Noms terminés par une vovelle: <em>ϫⲱ⸗</em> «tête».</p>
+					<p><b>1.</b> Noms terminés par une vovelle: <em>ϫⲱ⸗</em> «tête».</p>
 					<table>
 						<tr>
-							<th>Sing.</th>
-							<th></th>
-							<th>Pl.</th>
-							<th></th>
+							<th colspan="2">Sing.</th>
+							<th colspan="2">Pl.</th>
 						</tr>
 						<tr>
 							<td>1.</td>
@@ -1680,26 +1678,22 @@
 						<tr>
 							<td>2 m.</td>
 							<td><em>ϫⲱⲕ</em></td>
-							<td>2.</td>
-							<td><em>ϫⲱⲧⲉⲛ</em></td>
+							<td rowspan="2">2.</td>
+							<td rowspan="2"><em>ϫⲱⲧⲉⲛ</em></td>
 						</tr>
 						<tr>
 							<td>f.</td>
 							<td><em>ϫⲱ</em></td>
-							<td></td>
-							<td></td>
 						</tr>
 						<tr>
 							<td>3 m.</td>
 							<td><em>ϫⲱϥ</em></td>
-							<td>3.</td>
-							<td><em>ϫⲱⲟⲩ</em></td>
+							<td rowspan="2">3.</td>
+							<td rowspan="2"><em>ϫⲱⲟⲩ</em></td>
 						</tr>
 						<tr>
 							<td>f.</td>
 							<td><em>ϫⲱⲥ</em></td>
-							<td></td>
-							<td></td>
 						</tr>
 					</table>
 					<p class="footnote">1. OSE. 114.</p>
@@ -1709,58 +1703,51 @@
 					<p>De même <em>ⲣⲱ⸗</em> «bouche» et <em>ϩⲑⲏ⸗</em> «cœur».</p>
 				</div>
 				<div id="section-082" class="section" data-section-no="82">
-					<p>2. Noms terminés par une consonne:</p>
+					<p><b>2.</b> Noms terminés par une consonne:</p>
 					<table>
 						<tr>
-							<th></th>
-							<th></th>
+							<th colspan="2"></th>
 							<th>par <em>ⲧ</em>: <em>ⲣⲁⲧ⸗</em> «pied»;</th>
 							<th>par <em>ⲛ</em>: <em>ⲣⲉⲛ⸗</em> «nom».</th>
 						</tr>
 						<tr>
-							<td>Sing.</td>
+							<td rowspan="5">Sing.</td>
 							<td>1.</td>
 							<td><em>ⲣⲁⲧ</em></td>
 							<td><em>ⲣⲉⲛⲧ</em></td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>2 m.</td>
 							<td><em>ⲣⲁⲧⲕ</em></td>
 							<td><em>ⲣⲉⲛⲕ</em></td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>f.</td>
 							<td><em>ⲣⲁϯ</em></td>
 							<td><em>ⲣⲉⲛⲓ</em></td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>3 m.</td>
 							<td><em>ⲣⲁⲧϥ</em></td>
 							<td><em>ⲣⲉⲛϥ</em></td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>f.</td>
 							<td><em>ⲣⲁⲧⲥ</em></td>
 							<td><em>ⲣⲉⲛⲥ</em></td>
 						</tr>
 						<tr>
-							<td>Pl.</td>
+							<td rowspan="3">Pl.</td>
 							<td>1.</td>
 							<td><em>ⲣⲁⲧⲉⲛ</em></td>
 							<td><em>ⲣⲉⲛⲧⲉⲛ</em></td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>2.</td>
 							<td><em>ⲣⲁⲧⲉⲛ-ⲑⲏⲛⲟⲩ</em></td>
 							<td><em>ⲣⲉⲛ-ⲑⲏⲛⲟⲩ</em></td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>3.</td>
 							<td><em>ⲣⲁⲧⲟⲩ</em></td>
 							<td><em>ⲣⲉⲛⲟⲩ</em></td>
@@ -1772,10 +1759,8 @@
 					<p>Dans le mot <em>ϩⲣ⸗</em> la voyelle formative se place entre le radical et les suffixes comme il suit:</p>
 					<table>
 						<tr>
-							<th>Sing.</th>
-							<th></th>
-							<th>Pl.</th>
-							<th></th>
+							<th colspan="2">Sing.</th>
+							<th colspan="2">Pl.</th>
 						</tr>
 						<tr>
 							<td>1.</td>
@@ -1786,53 +1771,52 @@
 						<tr>
 							<td>2 m.</td>
 							<td><em>ϩⲣⲁⲕ</em></td>
-							<td>2.</td>
-							<td><em>ϩⲣⲉⲛ-ⲑⲏⲛⲟⲩ</em></td>
+							<td rowspan="2">2.</td>
+							<td rowspan="2"><em>ϩⲣⲉⲛ-ⲑⲏⲛⲟⲩ</em></td>
 						</tr>
 						<tr>
 							<td>f.</td>
 							<td><em>ϩⲣⲉ</em></td>
-							<td></td>
-							<td></td>
 						</tr>
 						<tr>
 							<td>3 m.</td>
 							<td><em>ϩⲣⲁϥ</em></td>
-							<td>3.</td>
-							<td><em>ϩⲣⲁⲩ</em></td>
+							<td rowspan="2">3.</td>
+							<td rowspan="2"><em>ϩⲣⲁⲩ</em></td>
 						</tr>
 						<tr>
 							<td>f.</td>
 							<td><em>ϩⲣⲁⲥ</em></td>
-							<td></td>
-							<td></td>
 						</tr>
 					</table>
 				</div>
 				<p><i>Règles et remarques.</i></p>
 				<div id="section-084" class="section" data-section-no="84">
-					<p>1. Le suffix de la 1 sg. est <em>ⲓ</em> après une voyelle, <em>ⲧ</em> après une consonne; mais lorsque le mot est déjà terminé par <em>ⲧ</em>, on n'ajoute pas un second <em>ⲧ</em>, <em>ⲣⲁⲧ</em> (et non <em>ⲣⲁⲧⲧ</em>) «mon pied».</p>
-					<p>2. La 2 f. sg. ne prend rien après une voyelle, elle prend <em>ⲓ</em> après une consonne (<em>ⲣⲁϯ</em> = <em>ⲣⲁⲧ-ⲓ</em>).</p>
-					<p>3. Lorsque le mot terminé par une consonne a la voyelle formative après le radical, comme <em>ϩⲣ⸗</em>, la 1 sg. est toujours en <em>ⲏⲓ</em> et la 2 f. sg. en <em>ⲉ</em>.</p>
+					<p><b>1.</b> Le suffix de la 1 sg. est <em>ⲓ</em> après une voyelle, <em>ⲧ</em> après une consonne; mais lorsque le mot est déjà terminé par <em>ⲧ</em>, on n'ajoute pas un second <em>ⲧ</em>, <em>ⲣⲁⲧ</em> (et non <em>ⲣⲁⲧⲧ</em>) «mon pied».</p>
+					<p><b>2.</b> La 2 f. sg. ne prend rien après une voyelle, elle prend <em>ⲓ</em> après une consonne (<em>ⲣⲁϯ</em> = <em>ⲣⲁⲧ-ⲓ</em>).</p>
+					<p><b>3.</b> Lorsque le mot terminé par une consonne a la voyelle formative après le radical, comme <em>ϩⲣ⸗</em>, la 1 sg. est toujours en <em>ⲏⲓ</em> et la 2 f. sg. en <em>ⲉ</em>.</p>
 				</div>
 				<div id="section-085" class="section" data-section-no="85">
-					<p>4. Lorsque par suite du <em>ⲧ</em> radical (<em>ⲣⲁⲧ</em>) la 1 pl. est en <em>ⲧⲉⲛ</em>, la 2 pl. peut avoir deux formes:</p>
-					<p>a) Si le mot n'a pas de forme abrégée, comme <em>ⲣⲁⲧ</em>, on ajoute <em>ⲑⲏⲛⲟⲩ</em> à la 1 pl.: <em>ⲣⲁⲧⲉⲛ-ⲑⲏⲛⲟⲩ</em> «votre pied» au lieu de <em>ⲣⲁⲧ-ⲧⲉⲛ</em>.</p>
-					<p>b) Si le mot a une forme abrégée, comme <em>ⲧⲟⲧ⸗</em> dans <em>ϩⲓ-ⲧⲉⲛ</em> (57), on ajoute <em>ⲑⲏⲛⲟⲩ</em> à cette dernière forme: <em>ⲉⲃⲟⲗ ϩⲓⲧⲉⲛ-ⲑⲏⲛⲟⲩ</em> «de vous»<sup class="footnote">1</sup>.</p>
+					<p><b>4.</b> Lorsque par suite du <em>ⲧ</em> radical (<em>ⲣⲁⲧ</em>) la 1 pl. est en <em>ⲧⲉⲛ</em>, la 2 pl. peut avoir deux formes:</p>
+					<p><b>a)</b> Si le mot n'a pas de forme abrégée, comme <em>ⲣⲁⲧ</em>, on ajoute <em>ⲑⲏⲛⲟⲩ</em> à la 1 pl.: <em>ⲣⲁⲧⲉⲛ-ⲑⲏⲛⲟⲩ</em> «votre pied» au lieu de <em>ⲣⲁⲧ-ⲧⲉⲛ</em>.</p>
+					<p><b>b)</b> Si le mot a une forme abrégée, comme <em>ⲧⲟⲧ⸗</em> dans <em>ϩⲓ-ⲧⲉⲛ</em> (57), on ajoute <em>ⲑⲏⲛⲟⲩ</em> à cette dernière forme: <em>ⲉⲃⲟⲗ ϩⲓⲧⲉⲛ-ⲑⲏⲛⲟⲩ</em> «de vous»<sup class="footnote">1</sup>.</p>
 					<p>En général, pour tous les mots qui ont une forme abrégée, la 2 pl. s'obtient en ajoutant <em>ⲑⲏⲛⲟⲩ</em> à cette forme:</p>
 					<p><em>ⲣⲉⲛ-ⲑⲏⲛⲟⲩ</em> «votre nom»; <em>ϩⲣⲉⲛ-ⲑⲏⲛⲟⲩ</em> «votre face».</p>
 					<p>Pour <em>ϫⲱ⸗</em> et ses composés on emploie les deux formes: <em>ⲉϫⲱⲧⲉⲛ</em> et <em>ⲉϫⲉⲛ-ⲑⲏⲛⲟⲩ</em>«sur vous»<sup class="footnote">2</sup>.</p>
 				</div>
-				<p>II. Pronoms possessifs.</p>
-				<p><i>1. Formes.</i></p>
+				<h6>II. Pronoms possessifs.</h6>
+<p><i><b>1.</b> Formes.</i></p>
 				<div id="section-086" class="section" data-section-no="86">
 					<p>Le pronom possessif a deux formes:</p>
-					<p>1. une forme abrégée:</p>
+					<p><b>1.</b> une forme abrégée:</p>
 					<table>
 						<tr>
-							<th>Sing. masc.</th>
+							<th colspan="2">Sing.</th>
+							<th rowspan="2">Pl.</th>
+						</tr>
+						<tr>
+							<th>masc.</th>
 							<th>fém.</th>
-							<th>Pl.</th>
 						</tr>
 						<tr>
 							<td><em>ⲫⲁ-</em></td>
@@ -1842,66 +1826,59 @@
 					</table>
 					<p class="footnote">1. Kef. 357.</p>
 					<p class="footnote">2. Pr. 1, 27.</p>
-					<p>2. une forme avec suffixes:</p>
+					<p><b>2.</b> une forme avec suffixes:</p>
 					<table>
 						<tr>
-							<th></th>
-							<th></th>
+							<th colspan="2"></th>
 							<th>masc. sing.</th>
 							<th>fém. sing.</th>
 							<th>pluriel</th>
 						</tr>
 						<tr>
-							<td>Sing.</td>
+							<td rowspan="5">Sing.</td>
 							<td>1.</td>
 							<td><em>ⲫⲱⲓ</em></td>
 							<td><em>ⲑⲱⲓ</em></td>
 							<td><em>ⲛⲟⲩⲓ</em></td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>2 m.</td>
 							<td><em>ⲫⲱⲕ</em></td>
 							<td><em>ⲑⲱⲕ</em></td>
 							<td><em>ⲛⲟⲩⲕ</em></td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>f.</td>
 							<td><em>ⲫⲱ</em></td>
 							<td><em>ⲑⲱ</em></td>
 							<td><em>ⲛⲟⲩ</em></td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>3 m.</td>
 							<td><em>ⲫⲱϥ</em></td>
 							<td><em>ⲑⲱϥ</em></td>
 							<td><em>ⲛⲟⲩϥ</em></td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>f.</td>
 							<td><em>ⲫⲱⲥ</em></td>
 							<td><em>ⲑⲱⲥ</em></td>
 							<td><em>ⲛⲟⲩⲥ</em></td>
 						</tr>
 						<tr>
-							<td>Plur.</td>
+							<td rowspan="3">Plur.</td>
 							<td>1.</td>
 							<td><em>ⲫⲱⲛ</em></td>
 							<td><em>ⲑⲱⲛ</em></td>
 							<td><em>ⲛⲟⲩⲛ</em></td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>2.</td>
 							<td><em>ⲫⲱⲧⲉⲛ</em></td>
 							<td><em>ⲑⲱⲧⲉⲛ</em></td>
 							<td><em>ⲛⲟⲩⲧⲉⲛ</em></td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>3.</td>
 							<td><em>ⲫⲱⲟⲩ</em></td>
 							<td><em>ⲑⲱⲟⲩ</em></td>
@@ -1910,16 +1887,16 @@
 					</table>
 					<p>En Ṣaꜥidique les formes sont les mêmes, mais avec <em>ⲡ</em> et <em>ⲧ</em>, au lieu des aspirées <em>ⲫ</em> <em>ⲑ</em> (24).</p>
 				</div>
-				<p><i>2. Sens.</i></p>
+<p><i><b>2.</b> Sens.</i></p>
 				<div id="section-087" class="section" data-section-no="87">
 					<p>La forme abrégée <em>ⲫⲁ-</em>, <em>ⲑⲁ-</em>, <em>ⲛⲁ-</em> a deux sens:</p>
-					<p>1. Un sens <i>actif</i> «possédant, possesseur de» qui correspond un peu au français «à» et à l'arabe «<em class="ar">صاحب، ذو</em>» dans les expressions de ce genre:</p>
+					<p><b>1.</b> Un sens <i>actif</i> «possédant, possesseur de» qui correspond un peu au français «à» et à l'arabe «<em class="ar">صاحب، ذو</em>» dans les expressions de ce genre:</p>
 					<p><em>ⲛⲓⲥⲉⲣⲁⲫⲓⲙ ⲛⲁ ⲡⲓⲋ̅ ⲛ̀ⲧⲉⲛϩ</em> «les Séraphins aux six ailes»<sup class="footnote">1</sup>.</p>
 					<p><em>ⲙⲁ ⲡⲓⲧⲁⲓⲟ ⲙ̀ⲫⲁ-ⲡⲓⲧⲁⲓⲟ</em> «donnez l'honneur au possesseur de l'honneur»<sup class="footnote">2</sup>.</p>
 					<p><em>ⲁⲃⲃⲁ ⲍⲁⲭⲁⲣⲓⲁⲥ ⲫⲁ-ⲡⲓⲉⲣⲫⲙⲉⲩⲓ ⲉⲑⲛⲁⲛⲉϥ</em> «l'abbé Zacharias de bonne mémoire»<sup class="footnote">3</sup>.</p>
 				</div>
 				<div id="section-088" class="section" data-section-no="88">
-					<p>2. Un sens <i>passif</i> qui convient aussi à la forme avec suffixes, «appartenant à, possession de»:</p>
+					<p><b>2.</b> Un sens <i>passif</i> qui convient aussi à la forme avec suffixes, «appartenant à, possession de»:</p>
 					<p class="footnote">1. Br. 282.</p>
 					<p class="footnote">2. Rom. 13, 7.</p>
 					<p class="footnote">3. Isaac 10.</p>
@@ -1927,14 +1904,14 @@
 					<p><em>ⲑⲱⲕ ⲧⲉ ϯϫⲟⲙ ⲛⲉⲙ ⲡⲓⲱⲟⲩ</em> «à toi appartient la force et la gloire»<sup class="footnote">2</sup>.</p>
 					<p><em>ⲫⲱⲓ ⲡⲉ ⲡⲓⲕⲁϩⲓ ⲧⲏⲣϥ</em> «à moi appartient toute la terre»<sup class="footnote">3</sup>.</p>
 				</div>
-				<p><i>3. Syntaxe.</i></p>
+<p><i><b>3.</b> Syntaxe.</i></p>
 				<div id="section-089" class="section" data-section-no="89">
-					<p>1. Le pron. possessif, comme son nom l'indique, évite la répétition du nom du possesseur et équivaut au français «celui de, celle de, ceux de» ou «le mien, le tien, etc.»:</p>
+					<p><b>1.</b> Le pron. possessif, comme son nom l'indique, évite la répétition du nom du possesseur et équivaut au français «celui de, celle de, ceux de» ou «le mien, le tien, etc.»:</p>
 					<p><em>ⲡⲉϥⲱⲟⲩ ⲛⲉⲙ ⲫⲁ-ⲡⲉϥⲓⲱⲧ</em> «sa gloire et celle de son Père»<sup class="footnote">4</sup>.</p>
 					<p><em>ⲛⲁⲓⲁⲗⲱⲙ ⲛⲁ-ⲡⲓⲙⲁⲛⲉⲥⲱⲟⲩ ⲛⲉ</em> «ces fromages sont ceux du berger»<sup class="footnote">5</sup>.</p>
 				</div>
 				<div id="section-090" class="section" data-section-no="90">
-					<p>2. Le pronom abrégé <em>ⲫⲁ-</em>, <em>ⲑⲁ-</em>, <em>ⲛⲁ-</em> forme avec les substantifs des composés comme:</p>
+					<p><b>2.</b> Le pronom abrégé <em>ⲫⲁ-</em>, <em>ⲑⲁ-</em>, <em>ⲛⲁ-</em> forme avec les substantifs des composés comme:</p>
 					<p><em>ⲫⲁ-ⲡⲓⲣⲟ</em> «celui de la porte = le portier».</p>
 					<p><em>ⲛⲁ-ⲧⲫⲉ ⲛⲉⲙ ⲛⲁ-ⲡⲕⲁϩⲓ</em> «les habitants du ciel et ceux de la terre»<sup class="footnote">6</sup>.</p>
 					<p><em>ⲛⲁ-ϯⲧⲁⲝⲓⲥ</em> «ceux de l'ordre = les gardes»<sup class="footnote">7</sup>.</p>
@@ -1944,7 +1921,7 @@
 					<p><em>ⲡⲁ-ⲭⲱⲛ</em> ou <em>ⲡⲁ-ϣⲟⲛⲥ</em> (le mois du dieu Chons) «Pachons».</p>
 				</div>
 				<div id="section-091" class="section" data-section-no="91">
-					<p>3. On emploie souvent le pron. poss. après les relatifs démonstratifs <em>ⲫⲏ ⲉⲧⲉ</em>, <em>ⲑⲏ ⲉⲧⲉ</em>, <em>ⲛⲏ ⲉⲧⲉ</em> (97) en lui rattachant, au moyen de <em>ⲛ</em>, le nom de l'objet possédé:</p>
+	<p><b>3.</b> On emploie souvent le pron. poss. après les relatifs démonstratifs <em>ⲫⲏ ⲉⲧⲉ</em>, <em>ⲑⲏ ⲉⲧⲉ</em>, <em>ⲛⲏ ⲉⲧⲉ</em> (97) en lui rattachant, au moyen de <em>ⲛ</em>, le nom de l'objet possédé:</p>
 					<p class="footnote">1. Ps. 23, 1.</p>
 					<p class="footnote">2. Guide de la Semaine sainte 38.</p>
 					<p class="footnote">3. Ex. 19, 5.</p>
@@ -1957,14 +1934,42 @@
 					<p><em>ⲙ̀ⲙⲟⲛ ⲟⲩⲡⲣⲟⲫⲏⲧⲏⲥ ⲉϥⲧⲁⲓⲏⲟⲩⲧ ϧⲉⲛ ⲑⲏ ⲉⲧⲉ ⲑⲱϥ ⲙ̀ⲃⲁⲕⲓ</em> «aucun prophète n'est honoré dans sa propre ville»<sup class="footnote">3</sup>.</p>
 					<p><em>ⲑⲏ ⲉⲧⲉ ⲑⲱϥ ⲙ̀ⲯⲩⲭⲏ</em> «son âme»<sup class="footnote">4</sup>.</p>
 				</div>
-				<p>Chapitre IV.</p>
+				<h5>Chapitre IV.</h5>
 				<p>Adjectifs et Pronoms Démonstratifs.</p>
-				<p>I. Pour les objets rapprochés.</p>
-				<p><i>1. Adjectifs.</i></p>
+				<h6>I. Pour les objets rapprochés.</h6>
+<p><i><b>1.</b> Adjectifs.</i></p>
 				<div id="section-092" class="section" data-section-no="92">
-					<p>Sing. masc. <em>ⲡⲁⲓ-</em> «ce», fém. <em>ⲧⲁⲓ-</em> «cette», pl. <em>ⲛⲁⲓ-</em> «ces».</p>
-					<p><i>2. Pronoms.</i></p>
-					<p>Sing. masc. <em>ⲫⲁⲓ</em> «celui-ci», fém. <em>ⲑⲁⲓ</em> «celle-ci», pl. <em>ⲛⲁⲓ</em> «ceux-ci».</p>
+					<table>
+						<tr>
+							<th colspan="2">Sing.</th>
+							<th rowspan="2">Pl.</th>
+						</tr>
+						<tr>
+							<th>masc.</th>
+							<th>fém.</th>
+						</tr>
+						<tr>
+							<td><em>ⲡⲁⲓ-</em> «ce»</td>
+							<td><em>ⲧⲁⲓ-</em> «cette»</td>
+							<td><em>ⲛⲁⲓ-</em> «ces».</td>
+						</tr>
+					</table>
+					<p><i><b>2.</b> Pronoms.</i></p>
+					<table>
+						<tr>
+							<th colspan="2">Sing.</th>
+							<th rowspan="2">Pl.</th>
+						</tr>
+						<tr>
+							<th>masc.</th>
+							<th>fém.</th>
+						</tr>
+						<tr>
+							<td><em>ⲫⲁⲓ</em> «celui-ci»</td>
+							<td><em>ⲑⲁⲓ</em> «celle-ci»</td>
+							<td><em>ⲛⲁⲓ</em> «ceux-ci».</td>
+						</tr>
+					</table>
 					<p><em>ⲫⲁⲓ ⲡⲉ ⲡⲁϣⲏⲣⲓ</em> «celui-ci est mon fils»<sup class="footnote">5</sup>;</p>
 					<p><em>ⲡⲁⲓ-ⲉϩⲟⲟⲩ</em> «ce jour»;</p>
 					<p><em>ⲧⲁⲓⲣⲟⲙⲡⲓ</em> «cette année»;</p>
@@ -1987,11 +1992,11 @@
 					<p><em>ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓ</em> «après ces choses»,</p>
 					<p><em>ⲛⲁⲓ ⲉϥϫⲱ ⲙ̀ⲙⲱⲟⲩ</em> «disant ces choses»<sup class="footnote">3</sup>.</p>
 				</div>
-				<p>II. Pour les objets éloignés.</p>
-				<p><i>1. Pronoms.</i></p>
+				<h6>II. Pour les objets éloignés.</h6>
+<p><i><b>1.</b> Pronoms.</i></p>
 				<div id="section-095" class="section" data-section-no="95">
 					<p>Sing. masc. <em>ⲫⲏ</em> «celui-là», fém. <em>ⲑⲏ</em> «celle-là»; pl. <em>ⲛⲏ</em> «ceux-là, celles-là».</p>
-					<p><i>2. L'adjectif</i> ne s'est pas conservé; quand on veut indiquer expressément des objets éloignés on se sert de deux expressions invariables: <em>ⲉⲧⲧⲏ</em>, <em>ⲉⲧⲉⲙⲙⲁⲩ</em> composées du relatif <em>ⲉⲧ</em> et des adverbes <em>ⲧⲏ</em>, <em>ⲙ̀ⲙⲁⲩ</em> «là, là-bas» (20). Le substantif prend l'article:</p>
+					<p><i><b>2.</b> L'adjectif</i> ne s'est pas conservé; quand on veut indiquer expressément des objets éloignés on se sert de deux expressions invariables: <em>ⲉⲧⲧⲏ</em>, <em>ⲉⲧⲉⲙⲙⲁⲩ</em> composées du relatif <em>ⲉⲧ</em> et des adverbes <em>ⲧⲏ</em>, <em>ⲙ̀ⲙⲁⲩ</em> «là, là-bas» (20). Le substantif prend l'article:</p>
 					<p><em>ⲡⲓⲉϩⲟⲟⲩ ⲉⲧⲧⲏ</em> «ce jour-là»<sup class="footnote">4</sup>;</p>
 					<p><em>ϧⲉⲛ ⲡⲓⲥⲏⲟⲩ ⲉⲧⲉⲙⲙⲁⲩ</em> «en ce temps-là»<sup class="footnote">5</sup>.</p>
 				</div>
@@ -2012,7 +2017,7 @@
 					<p>Ce pronom s'unit aux démonstratifs <em>ⲫⲏ</em>, <em>ⲑⲏ</em>, <em>ⲛⲏ</em> pour former les composés suivants appelés relatifs démonstratifs:</p>
 					<table>
 						<tr>
-							<td>Sing.</td>
+							<td rowspan="2">Sing.</td>
 							<td>masc.</td>
 							<td><em>ⲫⲏ ⲉ</em></td>
 							<td><em>ⲫⲏ ⲉⲧ</em></td>
@@ -2020,7 +2025,6 @@
 							<td>«celui qui»;</td>
 						</tr>
 						<tr>
-							<td></td>
 							<td>fém.</td>
 							<td><em>ⲑⲏ ⲉ</em></td>
 							<td><em>ⲑⲏ ⲉⲧ</em></td>
@@ -2058,8 +2062,8 @@
 					<p><em>ⲡⲓ-ⲡⲉⲧϩⲱⲟⲩ</em> «le mal»; <em>ϩⲁⲛ-ⲡⲉⲧϩⲱⲟⲩ</em> «des maux»<sup class="footnote">3</sup>.</p>
 					<p>Pour l'emploi du pronom relatif et la différence entre <em>ⲉ</em>, <em>ⲉⲧ</em>, <em>ⲉⲧⲉ</em>, voir la proposition relative (378).</p>
 				</div>
-				<p>Chapitre V.</p>
-				<p>I. Pronoms Interrogatifs.</p>
+				<h5>Chapitre V.</h5>
+				<h6>I. Pronoms Interrogatifs.</h6>
 				<div id="section-100" class="section" data-section-no="100">
 					<p>1. <em>ⲁϣ</em> quel? quelle?</p>
 					<p>2. <em>ⲛⲓⲙ</em> qui? quel?</p>
