--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -16617,6 +16617,94 @@
 			<p><em></em></p>
 			<p class="footnote">1. Les actes des Martyrs de l'Egypte, par <i>Henri Hyvernat</i>. Paris 1886.</p>
 		</div>
+		<div id="vocabulaire_saidique">
+			<h2>Vocabulaire Saidique</h2>
+			<p>pour les <i>lettres</i> et les <i>inscriptions</i>.</p>
+			<p>• indique les mots grecs et étrangers.</p>
+			<table>
+				<tr>
+					<td class="gr"><em>ⲁⲙⲉⲗⲉⲓ</em></td><td></td><td>tarder.</td>
+				</tr>
+				<tr>
+					<td><em>ⲃⲱⲕ</em></td><td></td><td>aller, partir.</td>
+				</tr>
+				<tr>
+					<td class="gr"><em>ⲇⲓⲁⲕ</em></td><td></td><td>= <em>ⲇⲓⲁⲕⲱⲛ</em> diacre.</td>
+				</tr>
+				<tr>
+					<td><em>ⲉⲓ</em></td><td></td><td>= <em>ⲓ</em> venir.</td>
+				</tr>
+				<tr>
+					<td><em>ⲉⲓⲥ</em></td><td></td><td>= <em>ⲓⲥ</em> voici.</td>
+				</tr>
+				<tr>
+					<td><em>ⲉⲓⲱⲧ</em></td><td></td><td>= <em>ⲓⲱⲧ</em> père,</td>
+				</tr>
+				<tr>
+					<td></td><td></td><td><i>pl.</i> <em>ⲉⲓⲟⲧⲉ</em> = <em>ⲓⲟϯ</em>.</td>
+				</tr>
+				<tr>
+					<td class="gr"><em>ⲉⲗⲁⲭ</em>(<em>ⲓⲥⲧⲟⲥ</em>)</td><td></td><td>le plus petit, le très humble.</td>
+				</tr>
+				<tr>
+					<td><em>ⲉⲧⲃⲉ-</em>, <em>ⲉⲧⲃⲏⲧ⸗</em></td><td></td><td>au sujet de.</td>
+				</tr>
+				<tr>
+					<td><em>ⲉⲧⲟⲟⲧ⸗</em></td><td></td><td>à.</td>
+				</tr>
+				<tr>
+					<td><em>ⲉϩⲏⲧ</em></td><td></td><td>vers le Nord.</td>
+				</tr>
+				<tr>
+					<td class="gr"><em>ⲏ</em></td><td></td><td><i>art. grec fém. sing.</i> la.</td>
+				</tr>
+				<tr>
+					<td class="gr"><em>ⲑⲁⲣⲙⲟⲩⲥ</em></td><td></td><td>lupin.</td>
+				</tr>
+				<tr>
+					<td><em>ⲑⲃⲉⲓⲟ</em></td><td></td><td>= <em>ⲑⲉⲃⲓⲟ</em> être humilié.</td>
+				</tr>
+				<tr>
+					<td class="gr"><em>ⲓⲛⲇⲓⲕ</em>(<em>ⲧⲓⲱⲛ</em>)</td><td></td><td>indiction.</td>
+				</tr>
+				<tr>
+					<td class="gr"><em>ⲓⲱϩⲁⲛⲛⲏⲥ</em></td><td></td><td>Jean.</td>
+				</tr>
+				<tr>
+					<td><em>ⲕⲁⲁ⸗</em></td><td></td><td>= <em>ⲭⲁ⸗</em> <i>de</i> <em>ⲕⲱ</em> laisser.</td>
+				</tr>
+				<tr>
+					<td><em>ⲕⲟⲩⲓ</em></td><td></td><td>= <em>ⲕⲟⲩϫⲓ</em> un peu, quelques.</td>
+				</tr>
+				<tr>
+					<td><em>ⲕⲱ ⲉⲃⲟⲗ</em></td><td></td><td>pardonner.</td>
+				</tr>
+				<tr>
+					<td><em>ⲕⲁⲕⲉ</em></td><td></td><td>= <em>ⲭⲁⲕⲓ</em> ténèbres.</td>
+				</tr>
+				<tr>
+					<td><em></em></td><td></td><td><em>ⲣ̄ⲕⲁⲕⲉ</em> s'éclipser.</td>
+				</tr>
+				<tr>
+					<td class="gr"><em>ⲕⲣⲉⲓⲛⲉ</em></td><td></td><td>juger.</td>
+				</tr>
+				<tr>
+					<td class="gr"><em>ⲕⲣⲓⲙⲁ</em></td><td></td><td>jugement,</td>
+				</tr>
+				<tr>
+					<td><em></em></td><td></td><td><i>pour</i> <em>ⲭⲣⲏⲙⲁ</em> richesse.</td>
+				</tr>
+				<tr>
+					<td class="gr"><em>ⲕⲣⲓⲛⲉ</em></td><td></td><td>juger.</td>
+				</tr>
+				<tr>
+					<td><em>ⲕⲣⲟ</em></td><td></td><td>= <em>ⲭⲣⲟ</em> port.</td>
+				</tr>
+				<tr>
+					<td><em></em></td><td></td><td></td>
+				</tr>
+			</table>
+		</div>
 		<div id="liste_de_textes">
 			<h2>Liste des Textes.</h2>
 			<h3>I. Textes boḥairiques.</h3>
