--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2636,24 +2636,24 @@
 					<p>Il y a cependant cette différence entre ces deux manières de s'exprimer, que la forme du sing. avec l'article défini pl. indique plutôt plusieurs <i>individus</i> pris séparément, tandis que la forme du pluriel désigne l'espèce, l'ensemble, la collectivité; aussi cette forme prend plus volontiers l'article indéfini <em>ϩⲁⲛ</em>:</p>
 					<p><em>ⲛⲓ-ⲥⲁϧ</em> «les scribes» (pris individuellement), <em>ϩⲁⲛ-ⲥⲁϧⲉⲩ</em> «quelques scribes, un certain nombre de scribes».</p>
 				</div>
-				<p><i>Noms grecs.</i></p>
-				<div id="section-151" class="section" data-section-no="151">
+								<div id="section-151" class="section" data-section-no="151">
+					<p><i>Noms grecs.</i></p>
 					<p>Les noms grecs introduits en copte ne changent pas au pluriel: <em>ⲡⲓⲥⲱⲙⲁ</em>, <em>ⲛⲓⲥⲱⲙⲁ</em>.</p>
 					<p>Il n'y a d'exception que pour <em>ⲁⲩⲗⲏ</em> «cour» et <em>ⲯⲩⲭⲏ</em> «âme» qui ont parfois un pluriel copte: <em>ⲁⲩⲗⲏⲟⲩ</em>, <em>ⲯⲩⲭⲏⲟⲩ</em> ou <em>ⲯⲩⲭⲱⲟⲩⲓ</em>.</p>
 					<p>En S. les noms grecs en <em>ⲏ</em> ont parfois un plur. en <em>ⲟⲟⲩⲉ</em>: <em>ⲯⲩⲭⲏ</em>, <em>ⲯⲩⲭⲟⲟⲩⲉ</em>; <em>ⲅⲣⲁⲫⲏ</em>, <em>ⲅⲣⲁⲫⲟⲟⲩⲉ</em>.</p>
-					<p>Chapitre VII.</p>
-					<p>Relations des Noms Entr'eux.</p>
 				</div>
-				<p>I. Apposition.</p>
+				<h5>Chapitre VII.</h5>
+				<p>Relations des Noms Entr'eux.</p>
+				<h6>I. Apposition.</h6>
 				<div id="section-152" class="section" data-section-no="152">
-					<p>1. Lorsqu'un nom commun ou propre est mis en apposition à un nom propre, il le suit avec l'article et sans particule:</p>
+					<p><b>1.</b> Lorsqu'un nom commun ou propre est mis en apposition à un nom propre, il le suit avec l'article et sans particule:</p>
 					<p><em>ⲓⲱⲁⲛⲛⲏⲥ ⲡⲓⲣⲉϥϯⲱⲙⲥ</em> «Jean-Baptiste».</p>
 					<p><em>ⲏⲣⲱⲇⲏⲥ ⲡⲟⲩⲣⲟ</em> «le roi Hérode»<sup class="footnote">1</sup>.</p>
 					<p><em>ⲡϭⲟⲓⲥ ⲫϯ</em> «le Seigneur Dieu».</p>
 					<p><em>ⲓⲥⲁⲁⲕ ⲡⲉϥϣⲏⲣⲓ</em> «son fils Isaac»<sup class="footnote">2</sup>.</p>
 				</div>
 				<div id="section-153" class="section" data-section-no="153">
-					<p>2. Lorsqu'un nom propre est mis en apposition à un nom commun ou à un pronom, il est ordinairement précédé de <em>ϫⲉ</em> qu'on pourrait traduire par «nommé»:</p>
+					<p><b>2.</b> Lorsqu'un nom propre est mis en apposition à un nom commun ou à un pronom, il est ordinairement précédé de <em>ϫⲉ</em> qu'on pourrait traduire par «nommé»:</p>
 					<p><em>ⲡⲓⲣⲱⲙⲓ ϫⲉ ⲗⲱⲧ</em> «l'homme nommé Lot »<sup class="footnote">3</sup>.</p>
 					<p><em>ⲟⲩϣϣⲏⲛ ϫⲉ ⲥⲁⲃⲉⲕ</em> «un arbre appelé <i>sabek</i>»<sup class="footnote">4</sup>.</p>
 					<p>Parfois <em>ϫⲉ</em> est supprimé:</p>
@@ -2664,14 +2664,14 @@
 					<p><em>ⲡⲓⲁⲃⲟⲧ ⲉⲡⲏⲡ</em> «le mois d'Epip»<sup class="footnote">6</sup>.</p>
 				</div>
 				<div id="section-154" class="section" data-section-no="154">
-					<p>3. Lorsqu'un nom commun est mis en apposition à un autre nom commun, il est uni à lui comme un adjectif au moyen de <em>ⲛ̀</em> (<em>ⲙ̀</em> 28):</p>
+					<p><b>3.</b> Lorsqu'un nom commun est mis en apposition à un autre nom commun, il est uni à lui comme un adjectif au moyen de <em>ⲛ̀</em> (<em>ⲙ̀</em> 28):</p>
 					<p><em>ⲛⲉⲛⲓⲟϯ ⲛ̀ⲁⲡⲟⲥⲧⲟⲗⲟⲥ</em> «nos Pères, les Apôtres».</p>
 					<p><em>ⲡⲓⲥⲟⲛ ⲙ̀ⲙⲟⲛⲁⲭⲟⲥ</em> «le frère moine»<sup class="footnote">7</sup>.</p>
 					<p>Quelquefois il prend l'article sans <em>ⲛ̀</em>:</p>
 					<p><em>ⲛⲉⲕⲉⲃⲓⲁⲓⲕ ⲛⲓⲡⲣⲟⲫⲏⲧⲏⲥ</em> «tes serviteurs, les prophètes»<sup class="footnote">8</sup>.</p>
 				</div>
 				<div id="section-155" class="section" data-section-no="155">
-					<p>4. L'apposition d'un nom à un pronom personnel absolu ou affixe se fait au moyen de la particule <em>ϧⲁ</em>:</p>
+					<p><b>4.</b> L'apposition d'un nom à un pronom personnel absolu ou affixe se fait au moyen de la particule <em>ϧⲁ</em>:</p>
 					<p><em>ⲁⲛⲟⲕ ϧⲁ ⲡⲓϫⲱⲃ ⲛ̀ⲣⲉϥⲉⲣⲛⲟⲃⲓ</em> «moi, faible pécheur»<sup class="footnote">9</sup>.</p>
 					<p class="footnote">1. Mt. 2, 1.</p>
 					<p class="footnote">2. Gen. 22, 6.</p>
@@ -2685,11 +2685,11 @@
 					<p><em>ⲁⲛⲟⲛ ⲧⲏⲣⲉⲛ ϧⲁ ⲡⲉⲕⲗⲁⲟⲥ</em> «nous tous, ton peuple»<sup class="footnote">1</sup>.</p>
 					<p><em>ⲟⲩⲟⲓ ⲛⲱⲧⲉⲛ ϧⲁ ⲛⲓⲣⲁⲙⲁⲟⲓ</em> «malheur à vous, riches»<sup class="footnote">2</sup>.</p>
 					<p>Lorsque le mot mis en apposition est un pronom, voir § 63.</p>
-					<p>5. Un nom de nombre mis en apposition prend <em>ⲛ̀</em> (<em>ⲙ̀</em>):</p>
+					<p><b>5.</b> Un nom de nombre mis en apposition prend <em>ⲛ̀</em> (<em>ⲙ̀</em>):</p>
 					<p><em>ⲁⲩⲟϩⲓ ⲉⲣⲁⲧⲟⲩ ⲙ̀ⲡⲥⲛⲁⲩ</em> «ils se tinrent debout, tous les deux»<sup class="footnote">3</sup>.</p>
 					<p><em>ⲁⲩϣⲉ ⲛⲱⲟⲩ ⲙ̀ⲡⲥⲛⲁⲩ ⲉⲩⲥⲟⲡ</em> «ils s'en allèrent, tous les deux ensemble»<sup class="footnote">4</sup>.</p>
 				</div>
-				<p>II. Annexion.</p>
+				<h6>II. Annexion.</h6>
 				<div id="section-156" class="section" data-section-no="156">
 					<p>Nous entendons par <i>annexion</i> (<em class="ar">اضافة</em>) le rapport d'un nom à son complément déterminatif. Pour éviter toute équivoque, nous appellerons le premier <i>nom régissant</i> (<em class="ar">المضاف</em>) et le second <i>nom régi</i> (<em class="ar">المضاف اليه</em>).</p>
 				</div>
@@ -2698,33 +2698,34 @@
 					<p>En dehors de ce cas, l'annexion se fait en copte au moyen des deux particules <em>ⲛ̀</em> (<em>ⲙ̀</em> devant <em>ⲃ</em> <em>ⲙ</em> <em>ⲡ</em> <em>ⲫ</em> <em>ⲯ</em>) et <em>ⲛ̀ⲧⲉ</em>. <em>ⲛ̀</em> forme l'annexion <i>indéterminée</i>, <em>ⲛ̀ⲧⲉ</em> l'annexion <i>déterminée</i>.</p>
 				</div>
 				<div id="section-158" class="section" data-section-no="158">
-					<p>1. Emploi de <em>ⲛ̀</em>.</p>
-					<p><em>ⲛ̀</em> (<em>ⲙ̀</em>) s'emploie: 1. Quand le nom régi est indéterminé, c-à-d. qu'il n'a pas d'article:</p>
+					<p><b>1.</b> Emploi de <em>ⲛ̀</em>.</p>
+					<p><em>ⲛ̀</em> (<em>ⲙ̀</em>) s'emploie:</p>
+					<p><b>1.</b> Quand le nom régi est indéterminé, c-à-d. qu'il n'a pas d'article:</p>
 					<p><em>ⲟⲩⲭⲗⲟⲙ ⲛ̀ⲛⲟⲩⲃ</em> «une couronne d'or»;</p>
 					<p><em>ⲟⲩⲭⲗⲟⲗ ⲛ̀ϩⲁⲧ</em> «un collier d'argent».</p>
 					<p class="footnote">1. Th. 128.</p>
 					<p class="footnote">2. Luc 6, 24.</p>
 					<p class="footnote">3. AM. 150, 20.</p>
 					<p class="footnote">4. Gen. 22, 6.</p>
-					<p>2. Après les locutions prépositives <em>ⲙ̀-ⲫ-ⲣⲏϯ</em> «à la manière de», <em>ⲙ̀-ⲡ-ⲉⲙⲑⲟ</em> «en présence de», <em>ϧⲁ-ⲧ-ϩⲏ</em> «en face de», <em>ϩⲓ-ⲧ-ϩⲏ</em> «devant», etc.</p>
+					<p><b>2.</b> Après les locutions prépositives <em>ⲙ̀-ⲫ-ⲣⲏϯ</em> «à la manière de», <em>ⲙ̀-ⲡ-ⲉⲙⲑⲟ</em> «en présence de», <em>ϧⲁ-ⲧ-ϩⲏ</em> «en face de», <em>ϩⲓ-ⲧ-ϩⲏ</em> «devant», etc.</p>
 					<p><em>ⲙ̀ⲡⲉⲙⲑⲟ ⲙ̀ⲡϭⲟⲓⲥ</em> «en présence du Seigneur»<sup class="footnote">1</sup>.</p>
 					<p><em>ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲟⲩⲥⲁⲣⲁⲑⲏⲟⲩ</em> «comme une tempête»<sup class="footnote">2</sup>.</p>
-					<p>3. Après les formes avec suffixes des substantifs cités au § 55:</p>
+					<p><b>3.</b> Après les formes avec suffixes des substantifs cités au § 55:</p>
 					<p><em>ⲁⲩⲣⲏϫϥ ⲙ̀ⲡⲕⲁϩⲓ</em> «l'extrémité de la terre»<sup class="footnote">3</sup>.</p>
 					<p><em>ϧⲁϫⲱⲟⲩ ⲛ̀ⲛⲓⲕⲁⲗⲁⲙⲫⲟ</em> «avant les collines»<sup class="footnote">4</sup>.</p>
-					<p>4. Lorsque le nom régissant a l'article <em>ⲛⲉⲛ</em>:</p>
+					<p><b>4.</b> Lorsque le nom régissant a l'article <em>ⲛⲉⲛ</em>:</p>
 					<p><em>ⲛⲉⲛⲃⲁⲗ ⲙ̀ⲡϭⲟⲓⲥ</em> «les yeux du Seigneur»<sup class="footnote">5</sup>.</p>
 				</div>
-				<p>2. Emploi de <em>ⲛ̀ⲧⲉ</em>.</p>
+<p><b>2.</b> Emploi de <em>ⲛ̀ⲧⲉ</em>.</p>
 				<div id="section-159" class="section" data-section-no="159">
 					<p><em>ⲛ̀ⲧⲉ</em> s'emploie:</p>
-					<p>1. Entre deux noms propres:</p>
+					<p><b>1.</b> Entre deux noms propres:</p>
 					<p><em>ⲙⲁⲣⲓⲁ ⲛ̀ⲧⲉ ⲓⲁⲕⲱⲃⲟⲥ</em> «Marie, (mère) de Jacob»<sup class="footnote">6</sup>.</p>
 					<p><em>ϧⲉⲛ ⲧⲕⲁⲛⲁ ⲛ̀ⲧⲉ ϯⲅⲁⲗⲓⲗⲉⲁ</em> «à Cana de Galilée»<sup class="footnote">7</sup>.</p>
-					<p>2. Lorsque le nom régissant a l'article fort <em>ⲡⲓ</em> <em>ϯ</em> <em>ⲛⲓ</em>:</p>
+					<p><b>2.</b> Lorsque le nom régissant a l'article fort <em>ⲡⲓ</em> <em>ϯ</em> <em>ⲛⲓ</em>:</p>
 					<p><em>ϯϩⲟϯ ⲛ̀ⲧⲉ ⲡϭⲟⲓⲥ</em> «la crainte du Seigneur»<sup class="footnote">8</sup>.</p>
 					<p><em>ⲡⲓⲥⲑⲉⲣⲧⲉⲣ ⲛ̀ⲧⲉ ⲛⲓⲛⲁϫϩⲓ</em> «le grincement des dents»<sup class="footnote">9</sup>.</p>
-					<p>3. Quand le nom régissant a l'article indéfini <em>ⲟⲩ</em> <em>ϩⲁⲛ</em> et que le nom régi a un article défini ou indéfini:</p>
+					<p><b>3.</b> Quand le nom régissant a l'article indéfini <em>ⲟⲩ</em> <em>ϩⲁⲛ</em> et que le nom régi a un article défini ou indéfini:</p>
 					<p><em>ⲟⲩϣϣⲏⲛ ⲛ̀ⲧⲉ ⲡⲱⲛϧ</em> «l'arbre de vie»<sup class="footnote">10</sup>.</p>
 					<p><em>ⲟⲩⲭⲗⲟⲙ ⲛ̀ⲧⲉ ϩⲁⲛϩⲙⲟⲧ</em> «une couronne de grâces»<sup class="footnote">11</sup>.</p>
 					<p><em>ϩⲁⲛⲣⲟⲙⲡⲓ ⲛ̀ⲧⲉ ⲡⲱⲛϧ</em> «des années de vie»<sup class="footnote">12</sup>.</p>
@@ -2740,25 +2741,25 @@
 					<p class="footnote">10. Pr. 3, 18.</p>
 					<p class="footnote">11. Pr. 1, 9.</p>
 					<p class="footnote">12. Pr. 2, 19.</p>
-					<p>4. Quand le nom régi est séparé du nom régissant par quelque déterminatif:</p>
+					<p><b>4.</b> Quand le nom régi est séparé du nom régissant par quelque déterminatif:</p>
 					<p><em>ⲛⲓⲉⲥⲱⲟⲩ ⲉⲧⲥⲱⲣⲉⲙ ⲛ̀ⲧⲉ ⲡⲏⲓ ⲙ̀ⲡⲓⲥⲣⲁⲏⲗ</em> «les brebis égarées de la maison d'Israël»<sup class="footnote">1</sup>.</p>
 					<p><em>ⲡⲕⲁϩⲓ ⲧⲏⲣϥ ⲛ̀ⲧⲉ ⲭⲏⲙⲓ</em> «toute la terre d'Egypte»<sup class="footnote">2</sup>.</p>
 				</div>
 				<div id="section-160" class="section" data-section-no="160">
 					<p><i>Remarques.</i></p>
-					<p>1. Lorsque le nom régissant a l'article faible <em>ⲡ</em> <em>ⲧ</em>, on emploie à volonté <em>ⲛ̀</em> ou <em>ⲛ̀ⲧⲉ</em>.</p>
-					<p>2. Lorsqu'il y a plusieurs compléments déterminatifs à la suite, on ne répète pas la préposition de l'annexion:</p>
+					<p><b>1.</b> Lorsque le nom régissant a l'article faible <em>ⲡ</em> <em>ⲧ</em>, on emploie à volonté <em>ⲛ̀</em> ou <em>ⲛ̀ⲧⲉ</em>.</p>
+					<p><b>2.</b> Lorsqu'il y a plusieurs compléments déterminatifs à la suite, on ne répète pas la préposition de l'annexion:</p>
 					<p><em>ⲙ̀ⲡⲉⲙⲑⲟ ⲙ̀ⲡϭⲟⲓⲥ ⲛⲉⲙ ⲛⲓⲣⲱⲙⲓ</em> «devant le Seigneur et les hommes»<sup class="footnote">3</sup>.</p>
 					<p><em>ϩⲁⲛⲁϩⲱⲣ ⲛ̀ⲛⲟⲩⲃ ϩⲓ ϩⲁⲧ</em> «des trésors d'or et d'argent»<sup class="footnote">4</sup>.</p>
-					<p>Chapitre VIII.</p>
-					<p>Des Adjectifs en Particulier.</p>
-					<p>I. Formation.</p>
-					<p>La langue copte possède relativement peu d'adjectifs proprement dits, surtout d'adjectifs primitifs. On a vu §§ 124, 125, la formation des adjectifs dérivés; et §§ 135, 137, 141, celle des adjectifs composés.</p>
 					<p class="footnote">1. Mt. 10, 6.</p>
 					<p class="footnote">2. Ex. 8, 20.</p>
 					<p class="footnote">3. Pr. 3, 4.</p>
 					<p class="footnote">4. Pr. 3, 14.</p>
 				</div>
+				<h5>Chapitre VIII.</h5>
+				<p>Des Adjectifs en Particulier.</p>
+				<h6>I. Formation.</h6>
+				<p>La langue copte possède relativement peu d'adjectifs proprement dits, surtout d'adjectifs primitifs. On a vu §§ 124, 125, la formation des adjectifs dérivés; et §§ 135, 137, 141, celle des adjectifs composés.</p>
 				<div id="section-161" class="section" data-section-no="161">
 					<p>On supplée au manque d'adjectifs de deux manières:</p>
 					<p>1. Au moyen de l'annexion (158, 1):</p>
