--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2762,33 +2762,31 @@
 				<p>La langue copte possède relativement peu d'adjectifs proprement dits, surtout d'adjectifs primitifs. On a vu §§ 124, 125, la formation des adjectifs dérivés; et §§ 135, 137, 141, celle des adjectifs composés.</p>
 				<div id="section-161" class="section" data-section-no="161">
 					<p>On supplée au manque d'adjectifs de deux manières:</p>
-					<p>1. Au moyen de l'annexion (158, 1):</p>
+	<p><b>1.</b> Au moyen de l'annexion (158, 1):</p>
 					<p><em>ⲡⲓⲣⲁⲛ ⲛ̀ⲟⲩϫⲁⲓ</em> «le nom salutaire»<sup class="footnote">1</sup>.</p>
 					<p><em>ϯⲥⲙⲏ ⲛ̀ⲛⲟⲩϯ</em> «la voix divine»<sup class="footnote">2</sup>.</p>
 				</div>
 				<div id="section-162" class="section" data-section-no="162">
-					<p>2. Au moyen du qualitatif des verbes, précédé du relatif <em>ⲉⲧ</em> pour les substantifs <i>déterminés</i> et de l'auxiliaire <em>ⲉ⸗</em> avec les suffixes (3<sup>e</sup> présent) pour les substantifs <i>indéterminés</i>:</p>
+					<p><b>2.</b> Au moyen du qualitatif des verbes, précédé du relatif <em>ⲉⲧ</em> pour les substantifs <i>déterminés</i> et de l'auxiliaire <em>ⲉ⸗</em> avec les suffixes (3<sup>e</sup> présent) pour les substantifs <i>indéterminés</i>:</p>
 					<table>
 						<tr>
-							<td>Sg.</td>
+							<td rowspan="2">Sg.</td>
 							<td><i>dét.</i></td>
 							<td><em>ⲡⲓⲡⲛⲉⲩⲙⲁ ⲉⲑⲟⲩⲁⲃ</em></td>
 							<td>«L'Esprit-Saint»;</td>
 						</tr>
 						<tr>
-							<td></td>
 							<td><i>indét.</i></td>
 							<td><em>ⲟⲩⲡⲛⲉⲩⲙⲁ ⲉϥⲟⲩⲁⲃ</em></td>
 							<td>«un esprit saint»<sup class="footnote">3</sup>.</td>
 						</tr>
 						<tr>
-							<td>Pl.</td>
+							<td rowspan="2">Pl.</td>
 							<td><i>dét.</i></td>
 							<td><em>ⲛⲓⲙⲱⲓⲧ ⲉⲧⲥⲟⲩⲧⲱⲛ</em></td>
 							<td>«les voies droites»<sup class="footnote">4</sup>;</td>
 						</tr>
 						<tr>
-							<td></td>
 							<td><i>indét.</i></td>
 							<td><em>ϩⲁⲛⲙⲁⲛ̀ⲙⲟϣⲓ ⲉⲩⲥⲟⲩⲧⲱⲛ</em></td>
 							<td>«des voies droites»<sup class="footnote">5</sup>.</td>
@@ -2797,9 +2795,9 @@
 				</div>
 				<div id="section-163" class="section" data-section-no="163">
 					<p>Pour ce qui concerne la détermination, il y a deux remarques à faire:</p>
-					<p>1. Lorsque le qualitatif est attribut, il a toujours la forme indéterminée:</p>
+					<p><b>1.</b> Lorsque le qualitatif est attribut, il a toujours la forme indéterminée:</p>
 					<p><em>ⲉϥⲉⲁⲣⲉϩ ⲉ ⲛⲉⲕⲙⲁⲛ̀ϭⲟϫⲓ ⲉⲩ-ⲥⲟⲩⲧⲱⲛ</em> «il gardera tes voies droites»<sup class="footnote">6</sup>.</p>
-					<p>2. Tout mot suivi de <em>ⲛⲓⲃⲉⲛ</em> est considéré comme déterminé et demande <em>ⲉⲧ</em>:</p>
+					<p><b>2.</b> Tout mot suivi de <em>ⲛⲓⲃⲉⲛ</em> est considéré comme déterminé et demande <em>ⲉⲧ</em>:</p>
 					<p><em>ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲉⲧ-ⲧⲁⲓⲏⲟⲩⲧ</em> «tout ce qui est précieux»<sup class="footnote">7</sup>.</p>
 					<p><em>ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲉⲧ-ϣⲟⲡ ϧⲉⲛ ⲛⲓⲃⲁⲕⲓ ⲛⲉⲙ ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲉⲧ-ⲣⲏⲧ ⲉⲡϣⲱⲓ ⲉⲃⲟⲗ ϧⲉⲛ ⲡⲕⲁϩⲓ</em> «tous ceux qui sont dans les villes et tout ce qui pousse de terre»<sup class="footnote">8</sup>.</p>
 					<p class="footnote">1. Th. 131.</p>
@@ -2811,7 +2809,7 @@
 					<p class="footnote">7. Pr. 3, 15.</p>
 					<p class="footnote">8. Gen. 19, 25.</p>
 				</div>
-				<p>II. Place de l'adjectif.</p>
+				<h6>II. Place de l'adjectif.</h6>
 				<div id="section-164" class="section" data-section-no="164">
 					<p>Les adjectifs primitifs et dérivés se placent soit avant, soit après le substantif; les adjectifs composés se placent toujours après.</p>
 					<p>Le mot qui est au premier rang, substantif ou adjectif, reçoit l'article que demande le sens; celui qui est au second rang est toujours uni au premier au moyen de <em>ⲛ̀</em> et sans article:</p>
@@ -2828,7 +2826,7 @@
 					<p><em>ϧⲁⲉ</em> «dernier»,</p>
 					<p><em>ⲕⲟⲩϫⲓ</em> «petit»,</p>
 					<p><em>ⲙⲏϣ</em> «nombreux»,</p>
-					<p>et les deux adjectifs grecs <em>ⲁⲅⲓⲟⲥ</em> et <em>ⲙⲟⲛⲟⲅⲉⲛⲏⲥ</em>: </p>
+					<p>et les deux adjectifs grecs <em>ⲁⲅⲓⲟⲥ</em> et <em>ⲙⲟⲛⲟⲅⲉⲛⲏⲥ</em>:</p>
 					<p><em>ⲛⲉⲕⲁⲅⲓⲟⲥ ⲙ̀ⲙⲁⲑⲏⲧⲏⲥ</em> «tes saints disciples»<sup class="footnote">3</sup>.</p>
 					<p><em>ⲡⲓⲙⲟⲛⲟⲅⲉⲛⲏⲥ ⲛ̀ϣⲏⲣⲓ</em> «le fils unique».</p>
 				</div>
@@ -2851,7 +2849,7 @@
 					<p><em>ⲛⲓϥⲓ ⲛⲓⲃⲉⲛ ⲥⲉⲥⲙⲟⲩ ⲉⲣⲟⲕ</em> «tout esprit te loue»<sup class="footnote">2</sup>.</p>
 					<p>Cependant on trouve quelquefois le singulier:</p>
 					<p><em>ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲉⲑⲛⲁϭⲁⲥϥ ⲥⲉⲛⲁⲑⲉⲃⲓⲟϥ</em> «quiconque s'élève sera humilié»<sup class="footnote">3</sup>.</p>
-					<p>III. Accord de l'adjectif.</p>
+					<h6>III. Accord de l'adjectif.</h6>
 				</div>
 				<div id="section-168" class="section" data-section-no="168">
 					<p>Les adjectifs primitifs sont invariables.</p>
@@ -2874,8 +2872,8 @@
 					<p class="footnote">6. Deut. 1, 15.</p>
 					<p class="footnote">7. Pr. 14, 1.</p>
 				</div>
-				<p>IV. De la comparaison.</p>
-				<p><i>A. Comparatif.</i></p>
+				<h6>IV. De la comparaison.</h6>
+<p><i><b>A.</b> Comparatif.</i></p>
 				<div id="section-170" class="section" data-section-no="170">
 					<p>Le comparatif <i>d'infériorité</i> «moins» n'existe pas en copte; on ne dit pas «moins grand», mais «plus petit».</p>
 				</div>
