--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2901,7 +2901,7 @@
 					<p class="footnote">5. Gen. 29, 19.</p>
 					<p class="footnote">6. Ex. 14, 12.</p>
 				</div>
-				<p><i>B. Superlatif.</i></p>
+<p><i><b>B.</b> Superlatif.</i></p>
 				<div id="section-173" class="section" data-section-no="173">
 					<p>1. Le superlatif <i>absolu</i> s'exprime au moyen de <em>ⲉⲙⲁϣⲱ</em> «très, beaucoup» ajouté à l'adjectif:</p>
 					<p><em>ⲟⲩⲛⲓϣϯ ⲛ̀ⲣⲁϣⲓ ⲉⲙⲁϣⲱ</em> «une très grande joie»<sup class="footnote">1</sup>.</p>
@@ -2913,9 +2913,9 @@
 					<p><em>ⲫⲏ ⲉⲧⲟⲓ ⲛ̀ⲕⲟⲩϫⲓ ϧⲉⲛ ⲑⲏⲛⲟⲩ</em> «celui qui est le plus petit parmi vous»<sup class="footnote">3</sup>.</p>
 					<p><em>ⲡⲓⲕⲟⲩϫⲓ ⲉⲃⲟⲗ ⲟⲩⲧⲉ ⲛⲓⲁⲡⲟⲥⲧⲟⲗⲟⲥ</em> «le plus petit des Apôtres»<sup class="footnote">4</sup>.</p>
 				</div>
-				<p>Chapitre IX.</p>
+				<h5>Chapitre IX.</h5>
 				<p>De la Numération.</p>
-				<p>I. Les nombres.</p>
+				<h6>I. Les nombres.</h6>
 				<div id="section-175" class="section" data-section-no="175">
 					<p>Les nombres sont représentés par les lettres surmontées d'un seul trait jusqu'à mille et de deux à partir de mille.</p>
 					<p class="footnote">1. Mt. 2, 10.</p>
@@ -2923,9 +2923,9 @@
 					<p class="footnote">3. Luc 9, 48.</p>
 					<p class="footnote">4. 1 Cor. 15, 9.</p>
 				</div>
-				<p>1. Nombres cardinaux.</p>
+<p<b>>1.</b> Nombres cardinaux.</p>
 				<div id="section-176" class="section" data-section-no="176">
-					<p><i>1. Les nombres simples.</i></p>
+					<p><i><b>1.</b> Les nombres simples.</i></p>
 					<table>
 						<tr>
 							<td></td>
@@ -3121,7 +3121,7 @@
 						</tr>
 					</table>
 				</div>
-				<p><i>2. Les nombres composés.</i></p>
+<p><i><b>2.</b> Les nombres composés.</i></p>
 				<p>Dizaines.</p>
 				<div id="section-177" class="section" data-section-no="177">
 					<p>De 11 à 100 on forme les nombres en ajoutant les unités aux dizaines:</p>
@@ -3220,7 +3220,6 @@
 					<p>etc.</p>
 					<p><i>Remarque.</i></p>
 					<p>Les mille peuvent aussi s'exprimer au moyen des centaines précédées des dizaines et unies par <em>ⲛ̀</em>:</p>
-					<p class="footnote">1. <em>ⲣ</em> <i>barré</i>, voir le tableau des abréviations à la fin de la grammaire.</p>
 					<table>
 						<tr>
 							<td>2000</td>
@@ -3239,10 +3238,11 @@
 						</tr>
 					</table>
 					<p>etc.</p>
+					<p class="footnote">1. <em>ⲣ</em> <i>barré</i>, voir le tableau des abréviations à la fin de la grammaire.</p>
 				</div>
 				<p>Myriades et au-delà.</p>
 				<div id="section-179" class="section" data-section-no="179">
-					<p>Pour exprimer les 10000, on emploie <em>ⲑⲃⲁ</em> «myriade»; au delà, on suit la marche ordinaire. </p>
+					<p>Pour exprimer les 10000, on emploie <em>ⲑⲃⲁ</em> «myriade»; au delà, on suit la marche ordinaire.</p>
 					<p><em>ⲥⲛⲁⲩ</em> se met toujours après:</p>
 					<table>
 						<tr>
@@ -3272,7 +3272,7 @@
 						</tr>
 					</table>
 				</div>
-				<p><i>3. Syntaxe.</i></p>
+<p><i><b>3.</b> Syntaxe.</i></p>
 				<div id="section-180" class="section" data-section-no="180">
 					<p>Le nom de la chose nombrée se joint au nom de nombre au moyen de <em>ⲛ̀</em>, il reste au <i>singulier</i>. Le déterminatif qui précède, (article, adjectif, pronom) reste de même au <i>singulier</i>, masculin avec un nom masc. et féminin avec un nom féminin: </p>
 					<p><em>ⲡⲓ-ⲧⲉⲃⲧ ⲃ̅</em> «les deux poissons»<sup class="footnote">1</sup>.</p>
